assets/css/main.css
/* ... */
    ul.icons li:last-child {
      padding-right: 0; }
    ul.icons li > a, ul.icons li > span {
      border: 0; }
ul.menu {
  list-style: none;
  padding: 0; }
  ul.menu > li {
    border-left: solid 1px rgba(255, 255, 255, 0.15);
    display: inline-block;
    line-height: 1;
    margin-left: 1.5em;
    padding: 0 0 0 1.5em; }
    ul.menu > li:first-child {
      border-left: 0;
      margin: 0;
      padding-left: 0; }

@media screen and (max-width: 736px) {
  ul.actions:not(.fixed) {
    -moz-flex-direction: column;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-left: 0;
    width: 100% !important; }
    ul.actions:not(.fixed) li {
      -moz-flex-grow: 1;
      -webkit-flex-grow: 1;
      -ms-flex-grow: 1;
      flex-grow: 1;
      -moz-flex-shrink: 1;
      -webkit-flex-shrink: 1;
      -ms-flex-shrink: 1;
      flex-shrink: 1;
      padding: 1em 0 0 0;
      text-align: center;
      width: 100%; }
      ul.actions:not(.fixed) li > * {
        width: 100%; }
      ul.actions:not(.fixed) li:first-child {
        padding-top: 0; }
      ul.actions:not(.fixed) li input[type=submit], ul.actions:not(.fixed) li input[type=reset], ul.actions:not(.fixed) li input[type=button] {
        width: 100%; }
      ul.actions:not(.fixed) li button, ul.actions:not(.fixed) li .button {
        width: 100%; }
      ul.actions:not(.fixed) li input[type=submit].icon::before, ul.actions:not(.fixed) li input[type=reset].icon::before, ul.actions:not(.fixed) li input[type=button].icon::before {
        margin-left: -0.5rem; }
      ul.actions:not(.fixed) li button.icon::before, ul.actions:not(.fixed) li .button.icon::before {
        margin-left: -0.5rem; } }
@media screen and (max-width: 480px) {
  ul.menu > li {
    border-left: 0;
    display: block;
    line-height: inherit;
    margin: 0.5em 0 0 0;
    padding-left: 0; } }
section.special, article.special {
  text-align: center; }

header p {
  color: rgba(255, 255, 255, 0.35);
  position: relative;
  margin: 0 0 1.5em 0; }
header h2 + p {
  font-size: 1.25em;
  margin-top: -1em;
  line-height: 1.5em; }
header h3 + p {
  font-size: 1.1em;
  margin-top: -0.8em;
  line-height: 1.5em; }
header h4 + p, header h5 + p, header h6 + p {
  font-size: 0.9em;
  margin-top: -0.6em;
  line-height: 1.5em; }

.split {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex; }
  .split > * {
    width: calc(50% - 2.5em); }
  .split > :nth-child(2n-1) {
    padding-right: 2.5em;
    border-right: solid 1px rgba(255, 255, 255, 0.15); }
  .split > :nth-child(2n) {
    padding-left: 2.5em; }
  .split.style1 > :nth-child(2n-1) {
    width: calc(66.66666% - 2.5em); }
  .split.style1 > :nth-child(2n) {
    width: calc(33.33333% - 2.5em); }

@media screen and (max-width: 1680px) {
  .split > * {
    width: calc(50% - 2em); }
  .split > :nth-child(2n-1) {
    padding-right: 2em; }
  .split > :nth-child(2n) {
    padding-left: 2em; }
  .split.style1 > :nth-child(2n-1) {
    width: calc(66.66666% - 2em); }
  .split.style1 > :nth-child(2n) {
    width: calc(33.33333% - 2em); } }
@media screen and (max-width: 980px) {
  .split {
    display: block; }
    .split > * {
      border-top: solid 1px rgba(255, 255, 255, 0.15);
      margin: 4em 0 0 0;
      padding: 4em 0 0 0;
      width: 100% !important; }
    .split > :nth-child(2n-1) {
      border-right: 0;
      padding-right: 0; }
    .split > :nth-child(2n) {
      padding-left: 0; }
    .split > :first-child {
      border-top: 0;
      margin-top: 0;
      padding-top: 0; } }
@media screen and (max-width: 736px) {
  .split > * {
    margin: 3em 0 0 0;
    padding: 3em 0 0 0; } }
.spotlights > section {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-flex-direction: row;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 22.5em;
  justify-content: center;
  width: 100%;
  text-align: center; }
  .spotlights > section.alt {
    background-color: #261c3e; }
  .spotlights > section.style1 {
    background-color: #6a60a9; }
  .spotlights > section.style1-alt {
    background-color: #544b8b; }
  .spotlights > section.style2 {
    background-color: #5052b5; }
  .spotlights > section.style2-alt {
    background-color: #3e4094; }
  .spotlights > section.style3 {
    background-color: #85b4ff; }
  .spotlights > section.style3-alt {
    background-color: #953d75; }
  .spotlights > section.style4 {
    background-color: black; }

body.is-ie .spotlights > section {
  min-height: 0; }

.spotlights > section > .image {
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 0;
  color: rgba(0, 0, 0, 0);
  display: block;
  position: relative;
  width: 35em;
  background-color: #fff; }
  @media screen and (max-width: 736px) {
    .spotlights > section > .image {
      background-position: center top;
      background-color: unset; } }
  .spotlights > section > .image.image-one {
    background-image: url("../../images/TrackingPage.jpg"); }
  .spotlights > section > .image.image-two {
    background-image: url("../../images/StoresSite.jpg"); }
  .spotlights > section > .image img {
    border-radius: 0;
    display: block; }
  .spotlights > section > .image::before {
    -moz-transition: opacity 1s ease;
    -webkit-transition: opacity 1s ease;
    -ms-transition: opacity 1s ease;
    transition: opacity 1s ease;
    background: rgba(49, 36, 80, 0.9);
    content: "";
    display: block;
    height: 100%;
    left: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    width: 100%; }
.spotlights > section > .content {
  align-items: center;
  display: flex;
  padding: 2em; }
/* ... */

